начало слияния фронта и бека
проверяю работу пакетов

--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 PORT=5000
 DB_NAME=saloon
 DB_USER=postgres
-DB_PASSWORD=123
+DB_PASSWORD=Egor_2003
 DB_HOST=localhost
 DB_PORT=5432
 SECRET_KEY=abacaba3000
